--- a/style.css
+++ b/style.css
@@ -76,14 +76,20 @@ section-container
     padding-left: 5px;
    
 }
+.section-img:hover img{
+    transform: scale(1.3) rotate(360deg);
+    transition: transform 2s ease-in-out;
+}
 
 /* -------------------
 products-container 
 ----------------------*/
 
+
 .product-banner{
     margin-top: 15px;
     padding-left: 10px;
+   
 }
 
 .section-title{
@@ -129,3 +135,32 @@ products-container
     color: gray;
 }
 
+/* footer section*/
+.footer{
+    width: 100%;
+    height: 200px;
+    background-color: black;
+}
+footer h2{
+    color:white;
+    text-align: center;
+    margin-top: 20px;
+}
+.footer-details{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    color: white;
+   
+    
+}
+.footer-details p{
+    margin-top: -10px;
+}
+.social-icon{
+    font-size: 25px;
+
+    
+    
+   
+}
